// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormCheck> should  render bsPrefix if  label is specified 1`] = `
<DocumentFragment>
  <div
    class="form-check"
  >
    <input
      class="form-check-input"
      id="foo"
      name="foo"
      type="radio"
      value="foo"
    />
    <label
      class="form-check-label"
      for="foo"
      title=""
    >
      <div>
        Test Label
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<FormCheck> should not render bsPrefix if no label is specified 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      class="form-check-input"
      id="foo"
      name="foo"
      type="radio"
      value="foo"
    />
  </div>
</DocumentFragment>
`;
